<resources>
    <string name="app_name">P004_SelectionWidgets</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="list1_description">Using a ListView and an ArrayAdapter&lt;String&gt;</string>
    <string name="list1_selection">Select an item not yet implemented</string>
    <string name="list2_description">Using a ListView and an ArrayAdapter&lt;String&gt;, now with Listener</string>
    <string name="list2_selection">Select an item</string>
    <string name="list3_description">Using a ListActivity</string>
    <string name="list3_selection">Select an item</string>
    <string name="list4_description">Using a ListActivity, Single Choice</string>
    <string name="list4_selection">Select an item</string>
    <string name="list5_description">Using a ListActivity, Multi Choice</string>
    <string name="list5_selection">Select an item</string>
    <string name="spinner1_description">Using a Spinner</string>
    <string name="spinner1_selection">Select an item</string>
    <string name="grid1_description">Using a Grid</string>
    <string name="grid1_selection">Select an item</string>
    <string name="grid2_description">Using a Grid with a custom Adapter</string>
    <string name="grid2_selection">Select an item</string>
    <string name="autocomplete_description">Using a AutoCompleteTextView</string>
    <string name="autocomplete_selection">Write something ...</string>
</resources>
